force-app/main/default/objects/Contact/fields/Resign_of_Soci__c.field-meta.xml
<CustomField>
    <fullName>Resign_of_Soci__c</fullName>
    <label>Resign of Soci</label>
    <type>DateTime</type>
</CustomField>