force-app/main/default/objects/Contact/fields/RGPD__c.field-meta.xml
<CustomField>
    <fullName>RGPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGPD</label>
    <type>Checkbox</type>
</CustomField>