force-app/main/default/objects/Contact/fields/Signed_communications__c.field-meta.xml
<CustomField>
    <fullName>Signed_communications__c</fullName>
    <label>Signed communications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>Ofertes</fullName>
            </value>
            <value>
                <fullName>Novetats</fullName>
            </value>
            <value>
                <fullName>Corporatives</fullName>
            </value>
            <value>
                <fullName>Totes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>