force-app/main/default/objects/Contact/fields/Social_media_networks__c.field-meta.xml
<CustomField>
    <fullName>Social_media_networks__c</fullName>
    <label>Social media networks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Vimeo</fullName>
            </value>
            <value>
                <fullName>Tiktok</fullName>
            </value>
            <value>
                <fullName>Twitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>