force-app/main/default/objects/Contact/fields/Specialty_profession__c.field-meta.xml
<CustomField>
    <fullName>Specialty_profession__c</fullName>
    <label>Specialty profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S/entrada</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>altres especialitats</fullName>
            </value>
            <value>
                <fullName>professor idiomes</fullName>
            </value>
            <value>
                <fullName>professor primaria</fullName>
            </value>
            <value>
                <fullName>profeessor secundaria</fullName>
            </value>
            <value>
                <fullName>professor universitari</fullName>
            </value>
            <value>
                <fullName>Professor Batxillerat</fullName>
            </value>
            <value>
                <fullName>Mestre Escola Bressol</fullName>
            </value>
            <value>
                <fullName>Educació Especial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>