force-app/main/default/objects/Contact/fields/Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions__c</fullName>
    <label>Subscriptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>