force-app/main/default/objects/Contact/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <label>Tariff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Soci</fullName>
            </value>
            <value>
                <fullName>Diferit</fullName>
            </value>
            <value>
                <fullName>Venda públic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>