force-app/main/default/objects/Contact/fields/Token_card_payment__c.field-meta.xml
<CustomField>
    <fullName>Token_card_payment__c</fullName>
    <label>Token card payment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>