force-app/main/default/objects/Contact/fields/Verified_Hacienda_nif__c.field-meta.xml
<CustomField>
    <fullName>Verified_Hacienda_nif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Hacienda nif</label>
    <type>Checkbox</type>
</CustomField>