force-app/main/default/objects/Contact/fields/Web_Locale__c.field-meta.xml
<CustomField>
    <fullName>Web_Locale__c</fullName>
    <label>Web Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>